// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid.vue format 1`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<template>
<div
  v-for="  item instanceof  items "
></div>
</template>

=====================================output=====================================
<template>
  <div v-for="  item instanceof  items "></div>
</template>

================================================================================
`;

exports[`ts.vue format 1`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<script lang="ts"></script>
<template>
<div
v-for="a:number       of x as number[]"
v-for="[ a  , b]   : [   string,string ]     of x as Array<     [string, string]>"
v-for="  a  of list.map( (x:any): unknown     => x.foo.bar)"
v-for="([longLongProp, longLongProp, [longLongProp, longLongProp='Hello, Prettier!', [longLongProp, longLongProp, anotherLongLongProp=[longLongProp, longLongProp, anotherLongLongProp, yetAnotherLongLongProp], yetAnotherLongLongProp], yetAnotherLongLongProp], yetAnotherLongLongProp], index) of longLongLongLongLongLongLongLongList"
>
</div>
</template>

=====================================output=====================================
<script lang="ts"></script>
<template>
  <div
    v-for="a: number of x as number[]"
    v-for="[a, b]: [string, string] of x as Array<[string, string]>"
    v-for="a of list.map((x: any): unknown => x.foo.bar)"
    v-for="(
      [
        longLongProp,
        longLongProp,
        [
          longLongProp,
          longLongProp = 'Hello, Prettier!',
          [
            longLongProp,
            longLongProp,
            anotherLongLongProp = [
              longLongProp,
              longLongProp,
              anotherLongLongProp,
              yetAnotherLongLongProp,
            ],
            yetAnotherLongLongProp,
          ],
          yetAnotherLongLongProp,
        ],
        yetAnotherLongLongProp,
      ],
      index
    ) of longLongLongLongLongLongLongLongList"
  ></div>
</template>

================================================================================
`;
